--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ deepface==0.0.79
 mtcnn==0.1.1
 pandas==2.0.3
 matplotlib==3.7.1
+seaborn  # <-- Add this line
 streamlit-webrtc==0.47.1
 av==10.0.0
 spotipy==2.23.0
