--- a/render.yaml
+++ b/render.yaml
@@ -4,4 +4,4 @@ services:
     runtime: python
     pythonVersion: "3.11"
     buildCommand: "./build.sh"
-    startCommand: "streamlit run app.py"
+    startCommand: "streamlit run app.py --server.port $PORT --server.address=0.0.0.0"
