--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,8 @@ services:
   - type: web
     name: mood-based-music-recommendation-system
     runtime: python
-    pythonVersion: "3.11"
     buildCommand: "./build.sh"
     startCommand: "streamlit run app.py --server.port $PORT --server.address=0.0.0.0"
+    envVars:
+      - key: PYTHON_VERSION
+        value: "3.11"
